fix: removes overflow x

--- a/wp-content/themes/dna/vue/src/assets/scss/blog.scss
+++ b/wp-content/themes/dna/vue/src/assets/scss/blog.scss
@@ -26,6 +26,10 @@
             height: 3px;
         }
     }
+    
+    .mw100w{
+        max-width: 100vw;
+    }
 }
 .mb-100px{
     margin-bottom: 100px;
