--- a/wp-content/themes/dna/vue/src/assets/scss/cardCases.scss
+++ b/wp-content/themes/dna/vue/src/assets/scss/cardCases.scss
@@ -3,6 +3,7 @@
 @import '@/assets/scss/mixins.scss';
 
 .card-case{
+  max-width: 100vw;
   .mockup{
     display: block;
     position: relative;
