--- a/wp-content/themes/dna/vue/src/assets/scss/contact.scss
+++ b/wp-content/themes/dna/vue/src/assets/scss/contact.scss
@@ -139,4 +139,7 @@
             margin-right: auto;
         }
     }
+    .mw100w{
+        max-width: 100vw;
+    }
 }
